--- a/.github/workflows/wikisync.yml
+++ b/.github/workflows/wikisync.yml
@@ -1,4 +1,4 @@
-name: Docs/Wiki Sync
+name: Documentation
 
 on:
   push:
@@ -11,8 +11,8 @@ on:
   gollum:
 
 env:
-  GIT_AUTHOR_EMAIL: github.actor@users.noreply.github.com
-  GIT_AUTHOR_NAME: wikisync
+  GIT_AUTHOR_NAME: Actionbot
+  GIT_AUTHOR_EMAIL: actions@github.com
 
 jobs:
   job-sync-docs-to-wiki:
@@ -22,14 +22,14 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@v2
       - name: Sync docs to wiki
-        uses: newrelic/wiki-sync-action@master
+        uses: newrelic/wiki-sync-action@main
         with:
           source: docs
           destination: wiki
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.NEWRELIC_BOT_TOKEN }}
           gitAuthorName: ${{ env.GIT_AUTHOR_NAME }}
           gitAuthorEmail: ${{ env.GIT_AUTHOR_EMAIL }}
-
+  
   job-sync-wiki-to-docs:
     runs-on: ubuntu-latest
     if: github.event_name == 'gollum'
@@ -37,14 +37,14 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@v2
         with:
-          token: ${{ secrets.GITHUB_TOKEN }} # allows us to push back to repo
+          token: ${{ secrets.NEWRELIC_BOT_TOKEN }} # allows us to push back to repo
           ref: develop
       - name: Sync Wiki to Docs
-        uses: newrelic/wiki-sync-action@master
+        uses: newrelic/wiki-sync-action@main
         with:
           source: wiki
           destination: docs
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.NEWRELIC_BOT_TOKEN }}
           gitAuthorName: ${{ env.GIT_AUTHOR_NAME }}
           gitAuthorEmail: ${{ env.GIT_AUTHOR_EMAIL }}
-          branch: develop
+          branch: develop # since default branch is develop in this example
